# StackSpy

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
api/: config.py
api/app/: __init__.py
api/app/main/: __init__.py  events.py  routes.py
api/app/stackinspector/: __init__.py  routes.py
public/: index.html
src/: App.js  index.css  index.js
src/components/Navigation/: index.js
src/components/StackCalls/: StackCallDisplay.js  StackCallTable.js  StackCallTree.js  Tree.js  index.js
util/: __init__.py
