[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mitch Murphy <mitch.murphy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
